@@ -40,6 +40,8 @@ controls.no-friction = No Friction
 controls.lots-of-friction=Lots of Friction
 controls.return-object = Return Object
 
+walls.type = Walls
+
 surface.ice = ice
 surface.concrete = concrete
 surface.carpet = carpet
