@@ -71,6 +71,8 @@ object MotionSeriesDefaults {
     "moving-man/moving-man-standing.gif".literal, 1000)
 
   val wall = new MotionSeriesObject("wall".literal, 1000, 1000, 1000, 3.5, "wall.jpg".literal, 100)
+  val SPRING_HEIGHT = 0.6
+  val SPRING_WIDTH = 1.0
   val house = new MotionSeriesObject("house".literal, 1000, 1000, 1000, 5, "robotmovingcompany/house.gif".literal, 100)
 
   def wallWidth = wall.width
